# libssr

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  ssr_local.c  ssr_local.h
src/ssr-libev/: CMakeLists.txt
